--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "phaser-plugin",
+  "name": "@poki/phaser-3",
+  "repository": "https://github.com/poki/phaser-plugin",
+  "description": "A Phaser 3 plugin to easially integrate the Poki SDK",
   "version": "0.0.1",
   "source": "lib/index.js",
   "main": "dist/phaser-poki.js",
   "license": "ISC",
-  "private": true,
   "scripts": {
     "watch": "parcel ./example/index.html",
+    "build-publish": "rm -rf dist && parcel build && yarn publish",
     "lint": "standard"
   },
   "dependencies": {
